--- a/package.json
+++ b/package.json
@@ -6,7 +6,16 @@
   "dependencies": {},
   "devDependencies": {
     "body-parser": "^1.15.0",
-    "express": "^4.13.4"
+    "express": "^4.13.4",
+    "core-js": "^2.4.0",
+    "zone.js": "0.6.12",
+    "reflect-metadata": "0.1.3",
+    "rxjs": "5.0.0-beta.6",
+    "@angular/core":  "2.0.0-rc.5",
+    "@angular/common":  "2.0.0-rc.5",
+    "@angular/compiler":  "2.0.0-rc.5",
+    "@angular/platform-browser":  "2.0.0-rc.5",
+    "@angular/platform-browser-dynamic":  "2.0.0-rc.5"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
