--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "description": "Koru Care NZ is a charity for children who have disabilities or a terminal illness. Koru Care are the only kids charity that do thr Trip of a Lifetime for these children, destinations include Disneyland and Goldcoast. Please show your support and donate to this worthy childrens charity.",
   "main": "server.js",
-  "dependencies": {},
+  "dependencies": {
+    "ng2-simple-page-scroll": "^1.0.2",
+    "systemjs": "^0.19.41"
+  },
   "devDependencies": {
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
@@ -11,11 +14,11 @@
     "zone.js": "0.6.12",
     "reflect-metadata": "0.1.3",
     "rxjs": "5.0.0-beta.6",
-    "@angular/core":  "2.0.0-rc.5",
-    "@angular/common":  "2.0.0-rc.5",
-    "@angular/compiler":  "2.0.0-rc.5",
-    "@angular/platform-browser":  "2.0.0-rc.5",
-    "@angular/platform-browser-dynamic":  "2.0.0-rc.5"
+    "@angular/core": "2.0.0-rc.5",
+    "@angular/common": "2.0.0-rc.5",
+    "@angular/compiler": "2.0.0-rc.5",
+    "@angular/platform-browser": "2.0.0-rc.5",
+    "@angular/platform-browser-dynamic": "2.0.0-rc.5"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
