--- a/package.json
+++ b/package.json
@@ -4,32 +4,37 @@
   "description": "Koru Care NZ is a charity for children who have disabilities or a terminal illness. Koru Care are the only kids charity that do thr Trip of a Lifetime for these children, destinations include Disneyland and Goldcoast. Please show your support and donate to this worthy childrens charity.",
   "main": "server.js",
   "dependencies": {
-    "grunt": "^1.0.1",
-    "grunt-cli": "^1.2.0",
-    "grunt-contrib-clean": "^1.0.0",
-    "grunt-contrib-concat": "^1.0.1",
-    "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-imagemin": "^1.0.1",
-    "grunt-filerev": "^2.3.1",
-    "grunt-include-source": "^1.0.0",
-    "grunt-usemin": "^3.1.1",
+    "gulp": "^3.9.1",
+    "gulp-angular-templatecache": "^2.0.0",
+    "gulp-cli": "^1.2.2",
+    "gulp-imagemin": "^3.1.1",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-minify-html": "^1.0.6",
+    "gulp-rev": "^7.1.2",
+    "gulp-uglify": "^2.0.0",
+    "gulp-usemin": "^0.3.25",
+    "gulp-webpack": "^1.5.0",
     "htmlmin": "0.0.7",
-    "load-grunt-config": "^0.19.2",
+    "imagemin": "^5.2.2",
+    "imagemin-mozjpeg": "^6.0.0",
+    "imagemin-optipng": "^5.2.1",
+    "imagemin-pngquant": "^5.0.0",
     "systemjs": "^0.19.41",
-    "time-grunt": "^1.4.0"
+    "vinyl-fs": "^2.4.4"
   },
   "devDependencies": {
-    "body-parser": "^1.15.0",
-    "express": "^4.13.4",
-    "core-js": "^2.4.0",
-    "zone.js": "0.6.12",
-    "reflect-metadata": "0.1.3",
-    "rxjs": "5.0.0-beta.6",
-    "@angular/core": "2.0.0-rc.5",
     "@angular/common": "2.0.0-rc.5",
     "@angular/compiler": "2.0.0-rc.5",
+    "@angular/core": "2.0.0-rc.5",
     "@angular/platform-browser": "2.0.0-rc.5",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.5"
+    "@angular/platform-browser-dynamic": "2.0.0-rc.5",
+    "body-parser": "^1.15.0",
+    "core-js": "^2.4.0",
+    "express": "^4.13.4",
+    "gulp-image-resize": "^0.10.0",
+    "reflect-metadata": "0.1.3",
+    "rxjs": "5.0.0-beta.6",
+    "zone.js": "0.6.12"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
